--- a/ansible/templates/docker-compose.prod.j2
+++ b/ansible/templates/docker-compose.prod.j2
@@ -3,7 +3,7 @@ version: '3.8'
 
 services:
   backend:
-    image: {{ acr_login_server }}/momo-splitwise-backend:{{ image_tag | default('latest') }}
+    image: "{{ image_tag | default(acr_login_server + '/momo-splitwise-backend:latest') }}"
     container_name: momo-splitwise-backend
     restart: always
     ports:
